--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!Doctype html>
 <html>
-<head>
+  <head>
 	<title></title>
-</head>
-<body>
-<img src="abc1.png">
-<h1> Coming Soon...le wagon</h1>
-</body>
+	 <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+	<div id="container">
+		<img id="logo" src="abc1.png" alt="">
+		<h1> Coming Soon...le wagon</h1>
+	</div>	
+  </body>
 </html>
